--- a/BackendTFM/src/main/resources/application.properties
+++ b/BackendTFM/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://0.0.0.0:3306/rejillas?serverTimezone=UTC
+spring.datasource.url= jdbc:mysql://0.0.0.0:3306/rejilla?serverTimezone=UTC
 #credenciales de acceso
 spring.datasource.username=uned
 spring.datasource.password=uned
