--- a/BackendTFM/bin/src/main/resources/application.properties
+++ b/BackendTFM/bin/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:mysql://0.0.0.0:3306/rejilla?serverTimezone=UTC
 #credenciales de acceso
 spring.datasource.username=uned
 spring.datasource.password=uned
-#muestra las sentencias en consolas
+#muestra las sentencias en consola
 spring.jpa.show-sql=true
 # con update cada vez que se crea una entidad JPA crea una nueva tabla
 # si se modifica la entidad también se modifica su respectiva tabla
