Bucle en user.component.html para mostrar elementos

--- a/frontendTFM/.vscode/launch.json
+++ b/frontendTFM/.vscode/launch.json
@@ -5,10 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "java",
-            "name": "Debug (Launch) - Current File",
+            "type": "firefox",
             "request": "launch",
-            "mainClass": "${file}"
+            "reAttach": true,
+            "name": "Launch localhost",
+            "url": "http://localhost:4200",
+            "webRoot": "${workspaceFolder}"
         }
     ]
 }
