--- a/BackendTFM/src/main/resources/application.properties
+++ b/BackendTFM/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://0.0.0.0:3306/rejilla?serverTimezone=UTC
+#zeroDateTimeBehavior=convertToNull - Con esto evitamos los errores SQL cuando la fecha está vacía (la transforma en null para que JAVA lo entienda)
+spring.datasource.url= jdbc:mysql://0.0.0.0:3306/rejilla?serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
 #credenciales de acceso
 spring.datasource.username=uned
 spring.datasource.password=uned
@@ -8,6 +9,7 @@ spring.jpa.show-sql=true
 # con update cada vez que se crea una entidad JPA crea una nueva tabla
 # si se modifica la entidad también se modifica su respectiva tabla
 spring.jpa.hibernate.ddl-auto = update
+
 
 # permite a Hibernate generar SQL optimizado
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
